# ConnectServer

./: .gitignore  BUILD_CONFIG_SUMMARY.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakeLists_Phase1.txt  CONFIG_MANAGEMENT.md  ConnectServer.ini.example  IMPLEMENTATION_SUMMARY.md  MIGRATION_NOTES.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_READY.md  PORT_TESTING_SUMMARY.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RUN_PORT_TEST.sh  RUN_PORT_TEST_WINDOWS_FIX.md  ServerList.dat.example  TESTING_INDEX.md  TESTING_PORTS_UNIX.md  TEST_IMPLEMENTATION_COMPLETE.md  WINDOWS_PORT_TEST_FIX.md  test_readscript.cpp
config/: ConnectServer.ini.example  ServerList.dat.example
docs/: ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  INDEX.md  MIGRATION_PLAN.md  PROTOCOL.md  WINDOWS_TO_LINUX.md
include/: ClientSession.h  ConfigManager.h  ConnectServerProtocol.h  Console.h  ConsoleInterface.h  CriticalSection.h  IpManager.h  ProtocolDefines.h  Queue.h  ReadScript.h  ServerList.h  SocketManager.h  SocketManagerUdp.h  TimerManager.h  Util.h  Version.h.in
include/platform/linux/: SignalHandler.h
include/platform/windows/: CrashHandler.h
scripts/: QUICK_START.md  README_PORT_TESTING.md  build.bat  build.sh  cleanup_root_configs.bat  cleanup_root_configs.sh  test_ports.py  test_ports.sh  test_ports_windows.md
src/: ClientSession.cpp  ConfigManager.cpp  ConnectServerProtocol.cpp  Console.cpp  ConsoleInterface.cpp  CriticalSection.cpp  IpManager.cpp  Queue.cpp  ReadScript.cpp  ServerList.cpp  SocketManager.cpp  SocketManagerUdp.cpp  TimerManager.cpp  Util.cpp  main.cpp  main_phase1.cpp  main_phase2.cpp
src/platform/linux/: SignalHandler.cpp
src/platform/windows/: CrashHandler.cpp
